# Secret-bet

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  Makefile  README.md  package.json
app/: eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts  yarn.lock.bak
app/app/: globals.css  layout.tsx  page.tsx
app/app/plinko/: Board.tsx  Controls.tsx  page.tsx
app/app/roulette/: Controls.tsx  Table.tsx  Wheel.tsx  page.tsx
app/app/slots/: Controls.tsx  Reels.tsx  page.tsx
app/components/layout/: ControlPanel.tsx  GameLayout.tsx  app-shell.tsx  nav.tsx  wallet-widget.tsx
app/components/tx/: tx-lifecycle.tsx
app/lib/: config.ts  crypto.ts  per-auth.ts  round.ts  store.ts  telemetry.ts  types.ts
app/lib/game/: plinko.ts  roulette.ts  slots.ts
app/lib/idl/: hidden_bet_core.json  hidden_bet_plinko.json  hidden_bet_roulette.json  hidden_bet_slots.json
app/lib/solana/: assets.ts  backend-rounds.ts  constants.ts  wallet-balances.ts
app/plinko/: telemetry.ts
app/providers/: root-providers.tsx
app/roulette/: telemetry.ts
app/slots/: telemetry.ts
app/styles/: motion-tokens.ts  tokens.css
programs/hidden-bet-core/: Cargo.toml
programs/hidden-bet-core/src/: lib.rs
programs/hidden-bet-plinko/: Cargo.toml
programs/hidden-bet-plinko/src/: lib.rs
programs/hidden-bet-roulette/: Cargo.toml
programs/hidden-bet-roulette/src/: lib.rs
programs/hidden-bet-slots/: Cargo.toml
programs/hidden-bet-slots/src/: lib.rs
scripts/devnet/: deploy.sh  run-anchor-tests.sh  test.sh
scripts/localnet/: deploy.sh  down.sh  healthcheck.sh  report.sh  run-anchor-tests.sh  start.sh  test.sh  up.sh
scripts/wsl/: bootstrap.sh  check_env.sh
