[workspace]
members = [
  "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
magicblock-delegation-program = { path = "vendor/magicblock-delegation-program" }
blake3 = { path = "vendor/blake3" }
constant_time_eq = { path = "vendor/constant_time_eq" }
ephemeral-vrf-sdk = { path = "vendor/ephemeral-vrf-sdk" }
ephemeral-vrf-sdk-vrf-macro = { path = "vendor/ephemeral-vrf-sdk-vrf-macro" }
