[package]
name = "hidden-bet-core"
version = "0.1.0"
description = "Hidden Bet core lifecycle and treasury program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hidden_bet_core"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "=0.32.1", features = ["init-if-needed"] }
anchor-spl = "=0.32.1"
ephemeral-rollups-sdk = { version = "=0.6.5", features = ["anchor"] }
